@@ -65,6 +65,7 @@ Template for new versions:
 - `sort`: new search widgets for slab engraving menu; can filter for only units that need a slab to prevent rising as a ghost
 
 ## Fixes
+- `buildingplan`: remove bars of ash, coal, and soap as valid building materials to match v50 rules
 - `zone`: races without specific child or baby names will now get generic child/baby names instead of an empty string
 - `zone`: don't show animal assignment link for cages and restraints linked to dungeon zones (which aren't normally assignable)
 - `sort`: don't count mercenaries as appointed officials in the squad assignment screen
